tests/ui/impl-trait/precise-capturing/illegal-positions.real.stderr
error: `use<...>` precise capturing syntax not allowed in supertrait bounds
  --> $DIR/illegal-positions.rs:9:12
   |
LL | trait Foo: use<> {
   |            ^^^^^

error: `use<...>` precise capturing syntax not allowed in bounds
  --> $DIR/illegal-positions.rs:11:33
   |
LL |     type Assoc: use<> where (): use<>;
   |                                 ^^^^^

error: `use<...>` precise capturing syntax not allowed in bounds
  --> $DIR/illegal-positions.rs:11:17
   |
LL |     type Assoc: use<> where (): use<>;
   |                 ^^^^^

error: `use<...>` precise capturing syntax not allowed in bounds
  --> $DIR/illegal-positions.rs:17:11
   |
LL | fn fun<T: use<>>(_: impl use<>) where (): use<> {}
   |           ^^^^^

error: `use<...>` precise capturing syntax not allowed in bounds
  --> $DIR/illegal-positions.rs:17:43
   |
LL | fn fun<T: use<>>(_: impl use<>) where (): use<> {}
   |                                           ^^^^^

error: at least one trait must be specified
  --> $DIR/illegal-positions.rs:17:21
   |
LL | fn fun<T: use<>>(_: impl use<>) where (): use<> {}
   |                     ^^^^^^^^^^

error: `use<...>` precise capturing syntax not allowed in `dyn` trait object bounds
  --> $DIR/illegal-positions.rs:24:25
   |
LL | fn dynamic() -> Box<dyn use<>> {}
   |                         ^^^^^

warning: the feature `precise_capturing` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/illegal-positions.rs:5:12
   |
LL | #![feature(precise_capturing)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123432 <https://github.com/rust-lang/rust/issues/123432> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `use<...>` precise capturing syntax not allowed in argument-position `impl Trait`
  --> $DIR/illegal-positions.rs:17:26
   |
LL | fn fun<T: use<>>(_: impl use<>) where (): use<> {}
   |                          ^^^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/illegal-positions.rs:24:21
   |
LL | fn dynamic() -> Box<dyn use<>> {}
   |                     ^^^^^^^^^

error: aborting due to 9 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0224`.
